Implemented achievements and leaderboard
